--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@mui/x-date-pickers": "^8.14.0",
     "@reduxjs/toolkit": "^2.9.0",
     "@tanstack/react-query": "^5.90.2",
+    "@types/react-redux": "^7.1.34",
     "axios": "^1.12.2",
     "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
     "yup": "^1.7.1"
   },
