--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query": "^5.90.2",
     "@types/react-redux": "^7.1.34",
     "axios": "^1.12.2",
+    "dayjs": "^1.11.18",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
