--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mapbox/mapbox-gl-geocoder": "^5.1.2",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
     "@mui/x-date-pickers": "^8.14.0",
@@ -25,8 +26,11 @@
     "dayjs": "^1.11.18",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
+    "mapbox-gl": "^3.15.0",
+    "maplibre-gl": "^5.9.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-map-gl": "^8.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
     "yup": "^1.7.1"
@@ -45,6 +49,8 @@
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
+    "@vitest/browser": "3.2.4",
+    "@vitest/coverage-v8": "3.2.4",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
@@ -52,13 +58,11 @@
     "globals": "^16.4.0",
     "jsdom": "^27.0.0",
     "msw": "^2.11.5",
+    "playwright": "^1.56.1",
     "storybook": "^9.1.13",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7",
-    "vitest": "^3.2.4",
-    "@vitest/browser": "3.2.4",
-    "playwright": "^1.56.1",
-    "@vitest/coverage-v8": "3.2.4"
+    "vitest": "^3.2.4"
   }
 }
